blog post sidebar alignment fix

--- a/css/okfn-wordpress.css
+++ b/css/okfn-wordpress.css
@@ -1171,7 +1171,7 @@ ul.scrollButtons li.right a:hover {
 	float:left;
 }
 .single-post #sidebar {
-	margin-left:4px;
+	margin-left:8px;
 }
 
 .single-post #blog-single .post {
